--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,10 @@
 packages:
   # all packages in direct subdirs of packages/
   - 'packages/*'
+  # import to reference voby from demo projects
+  - 'packages/voby-demo/demo/*'
   # all packages in subdirs of components/
   - 'components/**'
   # exclude packages that are inside test directories
   - '!**/test/**'
-  - 'packages/solid/packages/*'
+  
