--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
         "meta:add": "meta git add .",
         "meta:commit": "meta git commit",
         "meta:push": "meta git push ",
-        "watch:oby": "pnpm --stream --parallel --filter=./packages/oby run watch",
-        "watch:voby": "pnpm -stream --parallel --filter=./packages/voby run watch",
-        "watch:via": "pnpm -stream --parallel --filter=./packages/via run watch",
-        "watch:via-demo": "pnpm -stream --parallel --filter=./packages/via-demo run watch",
+        "watch:oby": "pnpm --filter=./packages/oby run watch",
+        "watch:voby": "pnpm --filter=./packages/voby run watch",
+        "watch:via": "pnpm --filter=./packages/via run watch",
+        "watch:via-demo": "pnpm --parallel --filter=./packages/via-demo run watch",
         "watch1": "pnpm run \"/^watch:.*/\" ",
-        "watch": "pnpm --stream --parallel --filter=\"./packages/oby\" --filter=\"./packages/voby\" --filter=\"./packages/via\" --filter=\"./packages/via-demo\" run watch",
+        "watch": "pnpm --color --parallel --filter=\"./packages/oby\" --filter=\"./packages/voby\" --filter=\"./packages/via\" --filter=\"./packages/via-demo\" run watch",
+        "//watch": "npm-run-all watch:oby watch:voby watch:via-demo",
         "build": "pnpm --stream --parallel --filter=\"./packages/oby\" --filter=\"./packages/voby\" --filter=\"./packages/via\" --filter=\"./packages/via-demo\" run build",
         "bump": "pnpm version patch -w packages/*",
         "git:bump": "meta git commit -am 'Bump version to x.x.1'",
